Change header to fixed size to remove layout issues. Add zero margin to hero text.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,8 +4,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 0.5em;
-    position: fixed;
-    width: 100vw;
+    height: 50px;
 }
 
 .button-container {
