--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -1,7 +1,13 @@
 .image-holder {
     background-image: url("../../assets/badminton-court.png");
     background-size: cover;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: calc(100vh - 50px);
     background-position: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: darken; 
+}
+
+.hero-text {
+    margin: 0;
 }
